--- a/DoiTac.html
+++ b/DoiTac.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/DoiTac.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
@@ -9,6 +10,63 @@
     <style>
         body {
             background-image: url("images/bg.jpg");
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+                text-align: justify;
+            }
+
+            .time a {
+                display: none;
+            }
+
+            .relative {
+                display: none;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+                position: absolute;
+                bottom: 50px;
+                left: 20%;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .container h1{
+                font-size: 100px;
+            }
+            .container01{
+                height: 80%;
+            }
+            .container02{
+                height: 80%;
+            }
+            .container03{
+                height: 80%;
+                margin-bottom: 100px;
+            }
+            .info {
+                height: 100%;
+                width: 80%;
+                clear: both;
+                margin: 10%;
+                border: 1px solid #333;
+                overflow: hidden;
+            }
+            .subInfo a{
+                font-size: 40px;
+                line-height: 70px;
+            }
+            .subInfo button{
+                font-size: 30px;
+            }
         }
     </style>
     <title>Tin tức - MonsoonFestival</title>
@@ -79,7 +137,8 @@
             <div class="info">
                 <img src="images/DoiTac2.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">THE ARENA</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">THE
+                        ARENA</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -119,7 +178,8 @@
             <div class="info">
                 <img src="images/DoiTac4.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">JETSTAR PACIFIC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">JETSTAR
+                        PACIFIC</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -130,7 +190,8 @@
             <div class="info">
                 <img src="images/DoiTac5.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">VIETNAM AIRLINES</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">VIETNAM
+                        AIRLINES</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -139,7 +200,8 @@
             <div class="info">
                 <img src="images/DoiTac6.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">MAY DE VILLE HOTEL GROUP</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">MAY
+                        DE VILLE HOTEL GROUP</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -148,7 +210,8 @@
             <div class="info">
                 <img src="images/DoiTac7.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">FPT PLAY</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">FPT
+                        PLAY</a><br>
                     <button>
                         CHI TIẾT
                     </button>
